--- a/styles.css
+++ b/styles.css
@@ -1,84 +1,7 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,
+code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,
+form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,
+footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
     margin: 0;
     padding: 0;
     border: 0;
@@ -89,7 +12,8 @@ video {
 
 body {
     background-image: url('images/background.jpg');
-
+    background-size: 100%;
+    background-repeat: no-repeat;
 }
 
 h1 {
@@ -117,11 +41,18 @@ input,
 textarea,
 select,
 option {
-    background-image: linear-gradient(rgba(53, 53, 53, 0.692), rgba(88, 88, 88, 0.76), rgba(121, 121, 121, 0.76), rgba(177, 177, 177, 0.76));
+    background-color: rgb(62, 62, 83);
     border: none;
     color: white;
-    background-color: grey;
+    
     border-radius: 5%;
+
+}
+
+input:hover,
+textarea:hover,
+select:hover {
+    background-color: rgb(76, 76, 88);
 
 }
 
@@ -138,8 +69,8 @@ p {
     width: 40%;
     min-width: 350px;
     padding: 1rem 2rem;
-    background-image: linear-gradient(rgb(81, 81, 134), rgba(58, 58, 131, 0.76), rgba(42, 42, 175, 0.76), rgba(15, 15, 196, 0.76));
-    border-radius: 10%;
+    background-image: linear-gradient(rgb(81, 81, 134), rgba(58, 58, 131, 0.87), rgba(42, 42, 175, 0.863), rgba(15, 15, 196, 0.856));
+    border-radius: 5%;
     display: flex;
     flex-direction: column;
     align-content: space-between;
@@ -159,8 +90,8 @@ p {
 .submit {
     width: 25%;
     margin: 1rem auto 0;
-    background-image: linear-gradient(rgb(43, 42, 42), rgb(78, 76, 76), rgb(128, 128, 131), rgb(160, 160, 160));
-    border-radius: 30%;
+    background-image: linear-gradient(to right black, blue);
+    border-radius: 6%;
     border: none;
     padding: .5rem;
     color: whitesmoke;
@@ -265,22 +196,23 @@ p {
 
 }
 
-input:hover,
-textarea:hover,
-select:hover {
-    background-image: linear-gradient(rgb(43, 42, 42), rgb(78, 76, 76), rgb(128, 128, 131), rgb(160, 160, 160));
 
-}
 
 @media only screen and (min-width: 1300px) {
     .column-big {
         max-width: 48%;
     }
+
+    
 }
 
 @media only screen and (max-width: 1299px) {
     .form {
         max-width: 30%;
+    }
+
+    body {
+        background-size: 100% 100%;
     }
 }
 /* .file {
